2009-03-17  Maynard Johnson  <maynardj@us.ibm.com>

	* libop/op_allocate_counter.c: Make map_event_to_counter handle
	  a non-native cpu_type

2009-03-05  Robert Richter <robert.richter@amd.com>

	* libutil++/bfd_support.cpp: suppress 'unused parameter' warning

2009-02-10  Maynard Johnson  <maynardj@us.ibm.com>

	* libabi/tests/abi_test.cpp:
	* libregex/tests/java_test.cpp:
	* libregex/tests/regex_test.cpp: Use C++ style #includes
	  for stdlib and string
	

2009-02-09  Kjetil Barvik  <barvik@broadpark.no>

	* libabi/tests/abi_test.cpp:
	* libregex/tests/java_test.cpp:
	* libregex/tests/regex_test.cpp:
	* libutil/tests/file_tests.c: Fix gcc warnings

2009-02-06  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp:
	* libutil++/bfd_support.h:
	* libutil++/op_bfd.cpp: Fixup debuginfo processing for ppc64

2009-02-03  Carl Love  <cel@us.ibm.com>

	* utils/opcontrol:
	* doc/oprofile.xml:
	* events/ppc64/cell-be/events:
	* events/ppc64/cell-be/unit_masks: Added IBM CELL SPU event profiling support

2009-01-05  Maynard Johnson  <maynardj@us.ibm.com>

	* m4/binutils.m4: Fix error in AC_CHECK_LIB action

2008-12-23  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/opcontrol: reverse the logic in
	  is_non_cell_ppc64_variant to avoid the need
	  for maintenance as new ppc64 variants are addded

2008-12-12  Maynard Johnson  <maynardj@us.ibm.com>

	* libop/Makefile.am: Add Andi Kleen's new op_hw_specific.h
	  file to to Makefile.am

2008-11-24  Robert Richter <robert.richter@amd.com>

	* utils/opcontrol: Correct spelling error

2008-11-24  Robert Richter <robert.richter@amd.com>

	* daemon/opd_events.c:
	* daemon/opd_events.h:
	* daemon/opd_mangling.c:
	* daemon/opd_mangling.h:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.c:
	* events/x86-64/family10/events:
	* utils/opcontrol: fix whitespaces

2008-11-12  Andi Kleen  <andi@firstfloor.org>

	* libop/op_events.c
	* libop/op_events.h
	* libpp/op_header.cpp: Fix regression in arch perfmon code